bk_ida/gccida/c1/print_operand_address
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_operand_address/src/i386.c:6595:17: error: expected expression
if ( *( _OWORD *)&out.base != 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_operand_address/src/i386.c:6595:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&out.base != 0LL ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_operand_address/src/i386.c:6623:16: error: use of undeclared identifier 'off_63A1D6'
fprintf( file, off_63A1D6, scale); 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_operand_address/src/i386.c:6634:28: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
&& ( v7.rtwint = ( __int64)out.disp->fld[0], *( _WORD *)v7.rtwint == 75) 
                           ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_operand_address/src/i386.c:6678:16: error: use of undeclared identifier 'off_63A1DA'
fprintf( file, off_63A1DA, scale); 
               ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_operand_address/src/obj/i386.o] Error 1
